fix: change code html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
  <head>
   <meta charset="utf-8">
   
+  <title>CV</title>
+  <link rel="stylesheet" href="./style.css">
  </head>
  <body>
-  <script> </script>
+    <h1>Katerina Gapanovich</h1>
  </body>
 </html>
