--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
-  <meta charset="utf-8">
-   
-  <title>CV</title>
-  <link rel="stylesheet" href="./style.css">
- </head>
- <body>
-    <h1>Katerina Gapanovich</h1>
- </body>
+<html>
+   <head>
+      <title>CV</title>
+   </head>
+   <body>
+      <h1>Katerina Gapanovich</h1>
+   </body>
 </html>
