refactor: change code html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
-      <title>CV</title>
+      <title>Curriculum Vitae</title>
    </head>
    <body>
       <h1>Katerina Gapanovich</h1>
