--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                <li>Email: katerina.kulik@inbox.ru</li>
                <li>Nickname Discord: KaterinaGapanovich</li>
                <li>Accommodation: Minsk, Republic of Belarus</li>
-               <li><a href="https://t.me/KaterinaGapanovich" alt="Telegram">Telegram</a></li>
-               <li><a href="https://www.instagram.com/p/CYI3hJKoqTP/?igshid=YmMyMTA2M2Y=" alt="Instagram">Instagram</a>
+               <li><a href="https://t.me/KaterinaGapanovich">Telegram</a></li>
+               <li><a href="https://www.instagram.com/p/CYI3hJKoqTP/?igshid=YmMyMTA2M2Y=">Instagram</a>
                </li>
             </ul>
          </div>
