feat: change form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
    <title>Curriculum Vitae</title>
 </head>
 <body>
+
+<div class="colomn">
+
    <header>
       <div class="header">
          <div class="preconteiner">
@@ -111,5 +114,8 @@
       <p><img src="images/rs_school_js.svg" alt="logoRS_Shool" width="150"></p>
       <p><a href="https://rs.school/js/"> Link to the course</a></p>
    </footer>
+   
+<div>
+
 </body>
 </html>
