--- a/index.html
+++ b/index.html
@@ -1,115 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <link rel="stylesheet" href="style.css">
-   <title>Curriculum Vitae</title>
+   <title>CV Katerina Gapanovich</title>
+   <link rel="icon" type="image/png" href="images/icons850.png">
 </head>
-<body>
-   <header>
-      <div class="header">
-         <div class="preconteiner">
-            <p><img src="images/photo_2022-12-17_00-36-10.png" alt="myfoto" width="350"></p>
-         </div>
 
-         <div class="conteiner">
-            <h2> Katerina Gapanovich </h2>
-            <hr class="hr-shelf">
-            <ul>
-               <li>Phone number: +375333042962</li>
-               <li>Email: katerina.kulik@inbox.ru</li>
-               <li>Nickname Discord: KaterinaGapanovich</li>
-               <li>Accommodation: Minsk, Republic of Belarus</li>
-               <li><a href="https://t.me/KaterinaGapanovich">Telegram</a></li>
-               <li><a href="https://www.instagram.com/p/CYI3hJKoqTP/?igshid=YmMyMTA2M2Y=">Instagram</a>
-               </li>
+<body>
+   <header class="header">
+      <div class="header-wraper">
+         <nav class="menu">
+            <ul class="menu-list">
+               <li class="menu-item"><a href="#about" class="m-link"><b>ABOUT ME</b></a></li>
+               <li class="menu-item"><a href="#contacts" class="m-link"><b>CONTACTS</b></a></li>
+               <li class="menu-item"><a href="#education" class="m-link"><b>EDUCATION</b></a></li>
+               <li class="menu-item"><a href="#work" class="m-link"><b>WORK</b></a></li>
+               <li class="menu-item"><a href="#skills" class="m-link"><b>SKILLS</b></a></li>
+               <li class="menu-item"><a href="#code" class="m-link"><b>CODE</b></a></li>
             </ul>
-         </div>
+         </nav>
       </div>
    </header>
 
    <main>
-      <div>
-         <h3>About Me</h3>
-         I strive to realize my potential and achieve high results in the professional field, which in the future
-         will probably benefit the IT company. Get theoretical knowledge and practical experience in the profession
-         of a JS developer, thanks to the passage of RS School.
-         I accept and follow the norms of behavior accepted in the company and the team; I build working
-         relationships based on trust and mutual use; conscientious attitude to the performance of work; I always
-         meet the promised deadlines; consequence on the result; I strive to learn and explore new things; I do not
-         have any bad habits.
-      </div>
+      <div class="wrapper">
 
-      <div>
-         <h3>Skills</h3>
-         Familiar with the hypertext markup language of HTML documents, programming languages PHP, C#.
-      </div>
+         <div class="column1">
 
-      <div>
-         <h3>Сode example</h3>
-         <ol>
-            <li><i>Solving the problem when registering on Codewars</i>
-               <p><b>JS</b></p>
-               <p><b>function</b> multiply(a, b){</p>
-               <p><b>return</b> a * b};</p>
-            </li>
+            <div class="foto">
+               <div class="preconteiner">
+                  <p><img class="myfoto" src="images/Group76.png" alt="myfoto"></p>
+               </div>
+            </div>
 
-            <li><i>HTML code structure</i>
-               <p><b>HTML</b></p>
-               <p>&lt;!DOCTYPE html&gt;<br>
-                  &lt;head&gt;<br>
-                  &lt;title&gt;TITLE&lt;/title&gt;<br>
-                  &lt;/head&gt;<br>
-                  &lt;body&gt;<br>
-                  &lt;p&gt;BODY&lt;/p&gt;<br>
-                  &lt;/body&gt;<br>
-                  &lt;/html&gt;</p>
-            </li>
-         </ol>
-      </div>
+            <div class="conteiner">
+               <div class="name1">
+                  <h1> KATERINA </h1>
+               </div>
+               <div class="name2">
+                  <h2> GAPANOVICH </h2>
+               </div>
+               <hr class="hr-shelf">
+               <div class="profesion"><h2>Junior front-end developer JS</h2></div>
 
-      <div>
-         <h3>First project: CV</h3>
-      </div>
+               <div class="contacts menu-links" id="contacts">
+                  <h3> CONTACTS </h3>
+               </div>
+               <hr class="hr-shelf">
+               <ul class="cont">
+                  <li class="contact">
+                     <a href="#" class="contact-logo">
+                        <img src="images/free-icon-phone-call-126509.png" alt="Phone" width="17">
+                     </a>+375333042962
+                  </li>
+                  <li class="contact">
+                     <a href="#" class="contact-logo">
+                        <img src="images/free-icon-email-2512044.png" alt="Email" width="17">
+                     </a>katerina.kulik@inbox.ru
+                  </li>
+                  <li class="contact">
+                     <a href="#" class="contact-logo"><img src="images/discord.png" alt="Discord" width="18">
+                     </a>Nickname: Katerina#3951
+                  </li>
+                  <li class="contact">
+                     <a href="#" class="contact-logo">
+                        <img src="images/home.png" alt="Phone" width="17">
+                     </a>Minsk, Republic of Belarus
+                  </li>
+               </ul>
 
-      <div>
-         <h3>Education</h3>
-         In 2016 Received higher education, graduating from the Belarusian National Technical University with the
-         qualification of a teacher
-      </div>
+               <div class="skills menu-links" id="skills">
+                  <h3>SKILLS</h3>
+               </div>
+               <hr class="hr-shelf">
+               <div class="text-skills">
+                  <ul>
+                     <li class="text-skills"><b>Web-development:</b> HTML5, CSS3, JavaScript</li>
+                     <li class="text-skills"><b>Grapfics:</b> Figma</li>
+                     <li class="text-skills"><b>Version control:</b> GIT, Github</li>
+                     <li class="text-skills"><b>English level:</b> A2</li>
+                  </ul>
+               </div>
+            </div>
+         </div>
 
-      <div>
-         <h3> Additional education</h3>
-         <ul>
-            <li>2018 graduated from the advanced training program “State Ideology as the Basis for the Formation of
-               Citizenship, Patriotism and National Self-Consciousness” at the Belarusian National Technical University
-            </li>
-            <li>2016 graduated from educational courses in hairdressing at the training center “Tree of Knowledge”</li>
-            <li>2014-2016 graduated from the International University “MITSO” with the qualification of a logistics
-               specialist-economist</li>
-         </ul>
-      </div>
+         <div class="column2">
 
-      <div>
-         <h3>Work experience</h3>
-         <ul>
-            <li>Since 2016 currently working at the Belarusian National Technical University as a methodologist of the
-               department of ideological work and crime prevention</li>
-            <li>In 2014 worked as an educator at the Smena health camp as part of an internship</li>
-            <li>Since 2012 to 2013 worked in the Private Unitary Trade and Production Enterprise “McDonald’s
-               Restaurants” as a member of the restaurant team</li>
-         </ul>
-      </div>
+            <div class="about-for">
+               <div class="about-me menu-links" id="about">
+                  <h3> ABOUT ME </h3>
+               </div>
+               <hr class="hr-shelf">
+               <div class="text-me">
+                  I like to create websites - design and layout. I like to think over the structure of the site. Form a
+                  visual concept and create a user-friendly and aesthetically pleasing interface design.
+                  I strive to realize my potential and achieve high results in design and programming. At the moment, I
+                  get theoretical knowledge and practical experience in the profession of a JS web developer thanks to
+                  the passage of the Rolling Scopes school. My goal is to learn pure JS at a good level and learn the
+                  React library.
+               </div>
+            </div>
 
-      <div>
-         <h3>English level A2</h3>
+            <div class="education menu-links" id="education">
+               <h3>EDUCATION</h3>
+            </div>
+            <hr class="hr-shelf">
+            <div class="educat1">
+               <ul>
+                  <li class="educat1">Rolling Scopes School, 2022-2023</li>
+                  <li class="educat1">Potipako School, 2023</li>
+                  <li class="educat1">Belarusian National Technical University, Minsk 2016</li>
+               </ul>
+            </div>
+
+            <div class="work-for">
+               <div class="work menu-links" id="work">
+                  <h3>WORK EXPERIENCE</h3>
+               </div>
+               <hr class="hr-shelf">
+               <ul>
+                  <li class="work-about">2016-currently – BNTU (methodologist)</li>
+                  <li class="work-about">2014 – “Smena” health camp</li>
+                  <li class="work-about">2012-2013 – “McDonald’s Restaurants”</li>
+               </ul>
+            </div>
+
+            <div class="code-for">
+
+               <div class="code menu-links" id="code">
+                  <h3>СODE EXAMPLE</h3>
+               </div>
+               <hr class="hr-shelf">
+               <div class="first-project">
+                  <h3>First projects:
+                     <a
+                        href="https://rolling-scopes-school.github.io/katerinagapanovich-JSFE2022Q3/online-zoo/pages/main/index.html">
+                        <img src="images/Group77.png" alt="Zoo" width="60"></a>
+                     </a>
+                     <a
+                        href="https://rolling-scopes-school.github.io/katerinagapanovich-JSFEPRESCHOOL2022Q4/plants/pages/desktop/">
+                        <img src="images/plants.png" alt="Plants" width="80"></a>
+                  </h3>
+               </div>
+
+               <div class="codes">
+
+                  <div class="codes-1">
+                     <ul class="code-example">
+                        <li><i>HTML code structure</i>
+                           <p><b>HTML</b></p>
+                           <p>&lt;!DOCTYPE html&gt;<br>
+                              &lt;head&gt;&lt;title&gt;TITLE&lt;/title&gt;&lt;/head&gt;<br>
+                              &lt;body&gt;<br>
+                              &lt;header&gt;MENU&lt;/header&gt;<br>
+                              &lt;main&gt;<br>
+                              &lt;section&gt;WELCOME&lt;/section&gt;<br>
+                              &lt;section&gt;ABOUT&lt;/section&gt;<br>
+                              &lt;/main&gt;<br>
+                              &lt;fotter&gt;CONTACTS&lt;/fotter&gt;<br>
+                              &lt;/body&gt;<br>
+                              &lt;/html&gt;</p>
+                        </li>
+                     </ul>
+                  </div>
+
+                  <div class="codes-2">
+                     <ul class="code-example">
+                        <li><i>Task when registering on Codewars</i>
+                           <p><b>JavaScript</b></p>
+                           <p>function multiply(a, b){<br>
+                              return a * b };</p>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
    </main>
 
    <footer class="footer">
-      <p><a href="https://github.com/KaterinaGapanovich"> My GitHub </a></p>
-      <p>The Rolling Scopes is an independent international developer community founded in 2013.</p>
-      <p><img src="images/rs_school_js.svg" alt="logoRS_Shool" width="150"></p>
-      <p><a href="https://rs.school/js/"> Link to the course</a></p>
+      <div class="fotter-3row">
+         <div class="social_network">
+            <ul class="img_fot-list">
+               <li><a href="https://github.com/KaterinaGapanovich"><img class="img-fotter" src="images/github.png"
+                        alt="GitHub" width="35"></a></li>
+               <li><a href="https://www.instagram.com/p/CYI3hJKoqTP/?igshid=YmMyMTA2M2Y="><img class="img-fotter"
+                        src="images/instagram.png" alt="Instagram" width="35"></a></li>
+               <li><a href="https://t.me/KaterinaGapanovich"><img class="img-fotter" src="images/telegram.png"
+                        alt="Telegram" width="35"></a></li>
+            </ul>
+         </div>
+
+         <h2 class="text-2023">2023</h2>
+
+         <p class="rss"><a href="https://rs.school/js/"><img src="images/rs_school_js.svg" alt="logoRS_Shool"
+                  width="130"></a></p>
+      </div>
    </footer>
 </body>
+
 </html>
