feat: mistake error validator

--- a/index.html
+++ b/index.html
@@ -136,11 +136,13 @@
                   <h3>First projects:
                      <a
                         href="https://rolling-scopes-school.github.io/katerinagapanovich-JSFE2022Q3/online-zoo/pages/main/index.html">
-                        <img src="images/Group77.png" alt="Zoo" width="60"></a>
+                        <img src="images/Group77.png" alt="Zoo" width="60">
                      </a>
+
                      <a
                         href="https://rolling-scopes-school.github.io/katerinagapanovich-JSFEPRESCHOOL2022Q4/plants/pages/desktop/">
-                        <img src="images/plants.png" alt="Plants" width="80"></a>
+                        <img src="images/plants.png" alt="Plants" width="80">
+                     </a>
                   </h3>
                </div>
 
